Footer is fixed to the bottom; response form gives more messages; impossible to exceed 1000 characters in response; responses are wrapped

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  padding-bottom: 4rem;
+  position: relative;
+  min-height: 100%;
 }
 
 #main-navbar {
@@ -26,4 +28,16 @@ footer {
   background-color: #212529;
   padding: 1rem;
   color: #fff;
+
+  position: absolute;
+  bottom: 0;
+}
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+td {
+  word-wrap: break-word;
 }
